Bugfix character select wrap

--- a/src/components/general/character-select/character-select.module.css
+++ b/src/components/general/character-select/character-select.module.css
@@ -47,6 +47,7 @@
 
 .characterSelect .list {
   display: flex;
+  flex-wrap: wrap;
 }
 .characterSelect .list .item {
   position: relative;
